# lobby-desktop

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  games.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
