[package]
name = "lobby-desktop"
version = "0.1.8"
description = "Lobby — gaming tournaments platform, desktop app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
